k8s/app/app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-app-deployment
  namespace: blog
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: blog-app
  template:
    metadata:
      labels:
        app: blog-app
    spec:
      containers:
        - name: blog-app
          image: lucasferraz95/blog:1.0.0
          ports:
            - containerPort: 8080
