k8s/app/app-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog-ingress
  namespace: blog
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  rules:
    - host: blog.lucasferraz.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: blog-app
                port:
                  number: 8080
